[tool.poetry]
name = "Ai-agents"
version = "0.1.0"
description = ""
authors = ["MR-MARCOSs <marcosdudu001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
langchain = "^0.2.16"
requests = "^2.32.3"
black = "^24.8.0"
openai = "^1.43.0"
beautifulsoup4 = "^4.12.3"
poetry-plugin-dotenv = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
